--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
+monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
 	ESP8266WiFi
 	ayushsharma82/ESPConnect@^1.0.3
-    me-no-dev/ESPAsyncTCP@^1.2.2
+	me-no-dev/ESPAsyncTCP@^1.2.2
+	adafruit/Adafruit BME280 Library@^2.2.2
+	knolleary/PubSubClient@^2.8
+
 [env:esp01_1m]
+monitor_speed = 115200
 platform = espressif8266
 board = d1
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit BME280 Library@^2.2.2
+	knolleary/PubSubClient@^2.8
